--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h1 id="titulodotrabalho">Trabalho de português sobre o livro: "De covardes e  de heróis todos temos um pouco" </h1>
         <br><br><section id="caçada">
             <hr>
-            <h2 id="titulosdasseçoes">Caça-palavras</h2>
+            <h2 id="titulosdasseçoes">Caça-palavras e cruzadas</h2>
             <br><img src="caçador.png" id="caçapalavras">
             <img src="caçado.png" id="caçacoiso">
                 <hr>
